src/test/ui/resolve/token-error-correct.stderr
error: incorrect close delimiter: `}`
  --> $DIR/token-error-correct.rs:16:1
   |
16 | }
   | ^
   |
note: unclosed delimiter
  --> $DIR/token-error-correct.rs:14:12
   |
14 |     foo(bar(;
   |            ^

error: incorrect close delimiter: `}`
  --> $DIR/token-error-correct.rs:16:1
   |
16 | }
   | ^
   |
note: unclosed delimiter
  --> $DIR/token-error-correct.rs:14:8
   |
14 |     foo(bar(;
   |        ^

error: expected expression, found `;`
  --> $DIR/token-error-correct.rs:14:13
   |
14 |     foo(bar(;
   |             ^

error: aborting due to 3 previous errors

